# kcf_cpp

./: CMakeLists.txt  README.md
scripts/: build.sh  debug.sh  run.sh
src/: CMakeLists.txt  kcftracker.cpp  kcftracker.hpp  main.cpp  recttools.hpp  runtracker.cpp  tracker_kcf.h
